--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "latex-utensils",
-  "version": "6.2.0",
+  "name": "latex-utensils-patch",
+  "version": "6.2.0-fix1",
   "license": "MIT",
   "description": "A LaTeX parser, a BibTeX parser, and utilities",
   "homepage": "https://github.com/tamuratak/latex-utensils",
